--- a/src/main/webapp/css/scanboard.css
+++ b/src/main/webapp/css/scanboard.css
@@ -16,9 +16,10 @@ html,body{
 	overflow: hidden;
 }
 body{
-	background: url(../images/bg.jpg);
+	background: url(../images/bg5.png);
 	background-size: 100% 100%;
 }
+
 #loader{
 	width: 80px;
 	height: 80px;
@@ -77,6 +78,9 @@ body{
 .left{
 	float: left;
 	width: 20%;
+}
+.cont{
+	height: 90%;
 }
 .center{
 	float: left;
@@ -260,6 +264,7 @@ body{
 
 .centerWp{
 	width: 94%;
+	height: 100%;
 	margin: 0 auto;
 }
 
@@ -500,7 +505,10 @@ body{
 	}
 
 	.item{
-		margin-bottom: 20px;
+		margin-bottom: 30px;
+	}
+	.cont, .left > .item{
+		height: 30%;
 	}
 	.itemTit{
 		padding: 10px 30px;
